# MPF

./: .gitignore  Cargo.toml  LICENSE  README.md  dat.csv  pyproject.toml
.github/workflows/: mpf-py.yml  rust.yml
benches/: tree_grid_fitter.rs
data/: dat.csv  housing.csv
mpf-py/: Cargo.toml  pyproject.toml
mpf-py/notebooks/: correlated_settings.py  housing.py  hyperparameter_tuning.ipynb  hyperparameter_turning.py  simple_example.ipynb  tensor_projection.ipynb  tensor_projection.py  test.py  utils.py
mpf-py/python/: example.py  main.py
mpf-py/python/mpf_py/: __init__.py  main.py  mpf.py  wrapper.py
mpf-py/src/: lib.rs
mpf-py/tests/: test_models.py  test_reproducibility.py
python/: main.py
src/: family.rs  forest.rs  grid.rs  lib.rs  main.rs  test_data.rs  tree_grid.rs
src/family/: boosted.rs  combine_grids.rs  fitter.rs  params.rs
src/forest/: fitter.rs  forest_fitter.rs  mpf.rs  params.rs
src/grid/: candidates.rs  fitter.rs  grid_index.rs  gridindex.rs  identification.rs  params.rs  reproject_values.rs  splitting.rs  strategies.rs
src/tree_grid/: family.rs  fitter.rs  grid.rs  model.rs  model_py.rs  py_bindings.rs  tests.rs  tree_grid.rs  tree_grid_family.rs  tree_grid_family_2.rs  tree_grid_fitter.rs
src/tree_grid/family/: averaged.rs  bagged.rs  boosted.rs  grown.rs
src/tree_grid/fitter/: tests.rs
src/tree_grid/grid/: fitter.rs  params.rs  strategies.rs
src/tree_grid/model/: dat.csv  tests.rs
src/tree_grid/py_bindings/: fit_result.rs  tree_grid.rs
src/tree_grid/tree_grid_fitter/: tests.rs
tests/: family.rs  forest.rs  test_data.rs  tree_grid.rs
