[package]
name = "mpf-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
itertools = "0.13.0"
ndarray = "0.16.1"
rand = "0.8.5"
csv = "1.3.1"

[dev-dependencies]
csv = "1.3.1"

[profile.release]
opt-level = 3        # Maximize performance
lto = true           # Enable Link Time Optimization
codegen-units = 1    # Reduce codegen units for better optimization at the cost of longer compile time
