[package]
name = "mpf_rust"
version = "0.1.0"
edition = "2021"

[lib]
name = "mpf"
crate-type = ["lib"]


[dependencies]
rayon = { version = "1.8.1", optional = true }
itertools = "0.13.0"
ndarray = "0.16.1"
rand = "0.8.5"

[features]
use-rayon = ["rayon"]

[dev-dependencies]
csv = "1.3.1"
criterion = "0.5.1"

[[bench]]
name = "tree_grid_fitter"
harness = false

[profile.profiling]
inherits = "release"
debug = true

[workspace]
members = [
    ".",
    "mpf-py"
]
