[build-system]
requires = ["maturin>=1,<2"]
build-backend = "maturin"

[project]
name = "mpf_rust"
requires-python = ">=3.7"
version = "3.13"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
