[package]
name = "mpf-py"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "mpf_py"
crate-type = ["cdylib"]

[dependencies]
numpy = "0.23"
pyo3 = { version = "0.23.3", features = ["extension-module"] }
mpf_rust = { path = "../", features = [] }
rand = "0.8.5"

[features]
use-rayon = ["mpf_rust/use-rayon"]
